--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <button type="button" class="btn btn-primary" id="searchButton">
             Search
           </button>
+          <ul id="history"></ul>
         </div>
       </div>
     </div>
