got all the weather stuff to display

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
           </button>
           <ul id="history"></ul>
         </div>
+
+        <div class="col-md-9">
+          <!-- info about the city -->
+          <div class="row">
+            <div class="card" id="weather" style="width: 100%;"></div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- bootstrap stuff -->
@@ -46,6 +53,8 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+    <!-- moment js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="script.js"></script>
