--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div class="row">
             <div class="card" id="weather" style="width: 100%;"></div>
           </div>
+          <div class="row" id="futureWeather"></div>
         </div>
       </div>
     </div>
