making it pretty

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
           <!-- city search form -->
           <div class="form-group">
             <label for="city">City</label>
@@ -29,9 +29,9 @@
           <ul id="history"></ul>
         </div>
 
-        <div class="col-md-9">
+        <div class="col-md-10">
           <!-- info about the city -->
-          <div class="row">
+          <div class="row" id="today">
             <div class="card" id="weather" style="width: 100%;"></div>
           </div>
           <div class="row" id="futureWeather"></div>
