--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="assets/images/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
